--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -502,7 +502,12 @@
                   [(ngModel)]="mrs_item_code" [ngModelOptions]="{standalone: true}" />
                 <div class="input-group-append ">
                   <button (click)="onSearchItemCode()" [disabled]="!requestOrderDescForm.valid" class="btn-search"
-                    type="button"><span class="fa fa-search"></span>search</button>
+                    type="button"><span class="fa fa-search"></span> Search</button>
+
+                    <button mat-stroked-button color="primary" id="showRawMatsModal" class="editbtnStyle visibility-hidden"
+                    data-toggle="modal" data-target="#editModalModuleTagging" data-backdrop="false" data-keyboard="false">
+                    <mat-icon>turned_in_not</mat-icon>Access
+                  </button>
                 </div>
               </div>
             </div>
@@ -904,3 +909,158 @@
     </div>
   </div>
 </div>
+
+
+
+<form novalidate="novalidate" >
+  <div class="modal" role="dialog" id="editModalModuleTagging">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header bg-all text-white">
+          <div class="modal-title">Raw Materials</div>
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        </div>
+        <div class="modal-body">
+
+
+          <div class="col-sm-12">
+            <div class="d-flex">
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+                  </div>
+                  <select class="form-control" id="drpSearchBy" name="SearchByRM"
+                  [(ngModel)]="searchByRM"
+                  (change)="onFilterStatus($event.target.value)">
+                  <option value="">All</option>
+                    <option value="item_code">ITEM CODE</option>
+                    <option value="item_description">DESCRIPTION</option>
+
+                  </select>
+                </div>
+              </div>
+        
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+                  </div>
+                  <input type="search" class="form-control " placeholder="Find here...." id="txtSearchText" autocomplete="off"
+                    name="SearchTextRM" [(ngModel)]="searchTextRM" autofocus="off" (keyup)="onSearchTextChange($event)">
+                </div>
+              </div>
+    
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="column">
+              <div class="title-tagging-desc">List of Raw Material: {{totalRoleModulesUntaggedNewRowCount}}</div>
+              <div class="col-lg-12 mx-auto">
+                <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
+                  <tr class="text-light header-bg-color-um system-name">
+          
+                    <th class="text-center" style="width:16%">Item Code</th>
+                    <th class="text-center" style="width:16%">Description</th>
+                    <th class="text-center" style="width:16%">Category</th>
+                    <th class="text-center" style="width:16%">Uom</th>
+                    <th class="text-center" style="width:16%">Actions</th>
+                  </tr>
+
+                  <tr *ngFor="let item of itemList | paging : currentPageIndexModuleTagged : pageSize;
+                   let i = index">
+          
+                    <td>{{item.item_code}}</td>
+                    <td>{{item.item_description}}</td>
+                    <td>{{item.sub_category}}</td>
+                    <td>{{item.primary_unit}}</td>
+                    <td class="text-center">
+                      <button mat-stroked-button color="primary" class="editbtnStyle"
+                        (click)="onUntaggedClick($event, item)">
+                        <mat-icon>remove_circle_outline</mat-icon> Select
+                      </button>&nbsp;
+                    </td>
+                  </tr>
+                </table>
+
+                <div class="col-12">
+                  <ul class="pagination justify-content-center mt-1">
+                    <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged - 1)">
+                      <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
+                        onclick="return false">Prev</a>
+                    </li>
+
+                    <ng-container *ngIf="pagesRawMats.length <= 10">
+                      <li class="page-item" *ngFor="let page of pagesRawMats"
+                        [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexModuleTagged}"
+                        (click)="onPageIndexClickedModuleTagged(page.pageIndex)">
+                        <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
+                      </li>
+                    </ng-container>
+
+                    <ng-container *ngIf="pagesRawMats.length > 10">
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 0}"
+                        (click)="onPageIndexClickedModuleTagged(0)">
+                        <a class="page-link" href="#" onclick="return false">1</a>
+                      </li>
+
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 1}"
+                        (click)="onPageIndexClickedModuleTagged(1)">
+                        <a class="page-link" href="#" onclick="return false">2</a>
+                      </li>
+
+                      <li
+                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesRawMats.length - 2">
+                        &nbsp;...&nbsp;</li>
+
+                      <li class="page-item" [ngClass]=" 'link-active-paging' "
+                        (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged)"
+                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesRawMats.length - 2">
+                        <a class="page-link" href="#" onclick="return false">{{currentPageIndexModuleTagged + 1}}</a>
+                      </li>
+
+                      <li>&nbsp;...&nbsp;</li>
+
+                      <li class="page-item"
+                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pagesRawMats.length - 2}"
+                        (click)="onPageIndexClickedModuleTagged(pagesRawMats.length - 2)">
+                        <a class="page-link" href="#" onclick="return false">{{pagesRawMats.length - 1}}</a>
+                      </li>
+
+                      <li class="page-item"
+                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pagesRawMats.length - 1}"
+                        (click)="onPageIndexClickedModuleTagged(pagesRawMats.length - 1)">
+                        <a class="page-link" href="#" onclick="return false">{{pagesRawMats.length}}</a>
+                      </li>
+                    </ng-container>
+
+                    <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged + 1)">
+                      <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
+                        onclick="return false">Next</a>
+                    </li>
+                  </ul>
+                </div>
+
+
+              </div>
+
+
+            </div>
+      
+          </div>
+
+
+          
+
+        </div>
+        <div class="modal-footer">
+          <button mat-stroked-button color="accent" class="mr-1" id="editCancelModal" data-dismiss="modal"
+            type="button">Cancel</button>
+      
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
