--- a/app/components/online-mrs/online-mrs.component.scss
+++ b/app/components/online-mrs/online-mrs.component.scss
@@ -75,3 +75,38 @@ select:focus {
   font-size: 14px;
   padding-bottom: 5px;
 }
+
+
+// Create two equal columns that floats next to each other bobo ka
+.column {
+  float: left;
+  width: 100%;
+  padding: 0%;
+  // height: 300px;
+}
+
+.title-tagging-desc{
+  text-align: center;
+  font-size: 20px;
+  margin: 5px;
+}
+
+// Clear floats after the column
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+
+
+.visibility-hidden{
+  display: none;
+}
