Name Convention System Priviledge

--- a/app/admin/components/user-account/user-account.component.html
+++ b/app/admin/components/user-account/user-account.component.html
@@ -260,7 +260,7 @@
 
 
           <!-- role -->
-          <h5 style="float:left; font-weight:bold">System Preveledge: </h5>
+          <h5 style="float:left; font-weight:bold">System Priviledge: </h5>
 
           <hr>
           <div class="form-row">
