--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -77,10 +77,10 @@
                     <td>{{item.mrs_id}}</td>
                     <td>{{item.mrs_req_desc}}
 
-                      <ng-container *ngIf="Role === 'Admin' || approverRole === false || requestorFound === 1 " >
-                        <button  mat-stroked-button class="editbtnStyle display-none" id="EditDescriptionClick" data-toggle="modal" data-target="#editParent"
-                          data-backdrop="false" data-keyboard="false" (click)="clickUpdate(item)"><span
-                            class="fa fa-pencil"> </span></button>
+                      <ng-container *ngIf="Role === 'Admin' || approverRole === false || requestorFound === 1 ">
+                        <button mat-stroked-button class="editbtnStyle display-none" id="EditDescriptionClick"
+                          data-toggle="modal" data-target="#editParent" data-backdrop="false" data-keyboard="false"
+                          (click)="clickUpdate(item)"><span class="fa fa-pencil"> </span></button>
                       </ng-container>
 
                     </td>
@@ -438,7 +438,7 @@
 </div>
 
 
-<!-- add order modal ********************************************************************************************************************************************* -->
+
 <div class="modal" role="dialog" id="requestOrder">
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
@@ -504,8 +504,9 @@
                   <button (click)="onSearchItemCode()" [disabled]="!requestOrderDescForm.valid" class="btn-search"
                     type="button"><span class="fa fa-search"></span> Search</button>
 
-                    <button mat-stroked-button color="primary" id="showRawMatsModal" class="editbtnStyle visibility-hidden"
-                    data-toggle="modal" data-target="#editModalModuleTagging" data-backdrop="false" data-keyboard="false">
+                  <button mat-stroked-button color="primary" id="showRawMatsModal"
+                    class="editbtnStyle visibility-hidden" data-toggle="modal" data-target="#editModalModuleTagging"
+                    data-backdrop="false" data-keyboard="false">
                     <mat-icon>turned_in_not</mat-icon>Access
                   </button>
                 </div>
@@ -912,7 +913,7 @@
 
 
 
-<form novalidate="novalidate" >
+<form novalidate="novalidate">
   <div class="modal" role="dialog" id="editModalModuleTagging">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
@@ -930,27 +931,27 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
                   </div>
-                  <select class="form-control" id="drpSearchBy" name="SearchByRM"
-                  [(ngModel)]="searchByRM"
-                  (change)="onFilterStatus($event.target.value)">
-                  <option value="">All</option>
+                  <select class="form-control" id="drpSearchBy" name="SearchByRM" [(ngModel)]="searchByRM"
+                    (change)="onFilterStatus($event.target.value)">
+                    <option value="">All</option>
                     <option value="item_code">ITEM CODE</option>
                     <option value="item_description">DESCRIPTION</option>
 
                   </select>
                 </div>
               </div>
-        
+
               <div class="p-2">
                 <div class="input-group searchBtnStyle">
                   <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
                   </div>
-                  <input type="search" class="form-control " placeholder="Find here...." id="txtSearchText" autocomplete="off"
-                    name="SearchTextRM" [(ngModel)]="searchTextRM" autofocus="off" (keyup)="onSearchTextChange($event)">
+                  <input type="search" class="form-control " placeholder="Find here...." id="txtSearchText"
+                    autocomplete="off" name="SearchTextRM" [(ngModel)]="searchTextRM" autofocus="off"
+                    (keyup)="onSearchTextChange($event)">
                 </div>
               </div>
-    
+
             </div>
           </div>
 
@@ -961,7 +962,7 @@
               <div class="col-lg-12 mx-auto">
                 <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
                   <tr class="text-light header-bg-color-um system-name">
-          
+
                     <th class="text-center" style="width:16%">Item Code</th>
                     <th class="text-center" style="width:16%">Description</th>
                     <th class="text-center" style="width:16%">Category</th>
@@ -971,7 +972,7 @@
 
                   <tr *ngFor="let item of itemList | paging : currentPageIndexModuleTagged : pageSize;
                    let i = index">
-          
+
                     <td>{{item.item_code}}</td>
                     <td>{{item.item_description}}</td>
                     <td>{{item.sub_category}}</td>
@@ -1048,17 +1049,17 @@
 
 
             </div>
-      
+
           </div>
 
 
-          
+
 
         </div>
         <div class="modal-footer">
           <button mat-stroked-button color="accent" class="mr-1" id="editCancelModal" data-dismiss="modal"
             type="button">Cancel</button>
-      
+
         </div>
       </div>
     </div>
