--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -720,11 +720,13 @@
                     <td>{{item.prepared_allocated_qty | number}}</td>
                     <td class="hideObject">{{c | number}}</td>
                     <td class="text-center">
+                
+
                       <button (click)="onCancelItemClick(item)" data-toggle="modal" data-target="#cancelOrderItemModal"
-                        data-backdrop="false" data-keyboard="false" class="editbtnStyle" color="warn"
-                        mat-stroked-button>
-                        <span class="fa fa-ban"></span> cancel
-                      </button>&nbsp;
+                      data-backdrop="false" data-keyboard="false" class="editbtnStyle" color="warn"
+                      mat-stroked-button>
+                      <span class="fa fa-ban"></span> cancel
+                    </button>&nbsp;
 
                     </td>
                   </tr>
@@ -749,6 +751,55 @@
             </p>
           </ng-container>
 
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
+
+
+
+<!-- Cancel Item -->
+<form [formGroup]="cancelOrderItemForm">
+  <div class="modal" role="dialog" id="cancelOrderItemModal" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content" style="width:auto">
+        <div class="modal-header bg-all">
+          <div class="modal-title white-color">Cancel Order Item</div>
+          <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        </div>
+        <div class="modal-body">
+
+          <mat-form-field class="w-100" [hidden]="true" floatLabel="auto" appearance="outline" color="primary">
+            <input type="text" matInput formControlName="id" readonly="readonly">
+            <mat-label>Individual Id</mat-label>
+          </mat-form-field>
+
+          <mat-form-field class="w-100" floatLabel="auto" appearance="outline" color="primary">
+            <input type="text" matInput formControlName="mrs_item_code" readonly="readonly">
+            <mat-label>Item Code</mat-label>
+          </mat-form-field>
+
+          <mat-form-field class="w-100" floatLabel="auto" appearance="outline" color="primary">
+            <input type="text" matInput formControlName="mrs_item_description" readonly="readonly">
+            <mat-label>Item Description</mat-label>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label style="color:red">Reason</mat-label>
+            <mat-select formControlName="Is_wh_checker_cancel_reason">
+              <mat-option *ngFor="let status of CancelPoSummary | async" [value]="status.status_name">
+                {{status.status_name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="modal-footer">
+          <button mat-stroked-button color="accent" id="cancelOrderCloseModal" [hidden]="true" data-dismiss="modal"
+            class="mr-2">Cancel</button>
+          <button mat-stroked-button color="warn" class="" data-dismiss="modal" [disabled]="!cancelOrderItemForm.valid"
+            (click)="cancelOrderItem()">Submit</button>
         </div>
       </div>
     </div>
