--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -349,7 +349,7 @@
                     </tr>
                   </thead>
                   <tr
-                    *ngFor="let item of cancelledOrderList | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndex : pageSize; let i = index">
+                    *ngFor="let item of cancelledOrderList | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndexCancelled : pageSize; let i = index">
                     <td>{{item.mrs_id}}</td>
                     <td>{{item.mrs_req_desc}}</td>
                     <td>{{item.mrs_requested_by}}</td>
@@ -381,51 +381,51 @@
 
           <div class="col-12">
             <ul class="pagination justify-content-center mt-1">
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+              <li class="page-item" (click)="onPageIndexClickedCancelled(currentPageIndexCancelled - 1)">
                 <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
                   onclick="return false">Prev</a>
               </li>
 
               <ng-container *ngIf="pages.length <= 10">
-                <li class="page-item" *ngFor="let page of pages"
-                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndex}"
-                  (click)="onPageIndexClicked(page.pageIndex)">
+                <li class="page-item" *ngFor="let page of pagesCancelled"
+                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexCancelled}"
+                  (click)="onPageIndexClickedCancelled(page.pageIndex)">
                   <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
                 </li>
               </ng-container>
 
-              <ng-container *ngIf="pages.length > 10">
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0}"
-                  (click)="onPageIndexClicked(0)">
+              <ng-container *ngIf="pagesCancelled.length > 10">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelled == 0}"
+                  (click)="onPageIndexClickedCancelled(0)">
                   <a class="page-link" href="#" onclick="return false">1</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1}"
-                  (click)="onPageIndexClicked(1)">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelled == 1}"
+                  (click)="onPageIndexClickedCancelled(1)">
                   <a class="page-link" href="#" onclick="return false">2</a>
                 </li>
 
-                <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+                <li *ngIf="currentPageIndexCancelled > 1 && currentPageIndexCancelled < pagesCancelled.length - 2">&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndex)"
-                  *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                  <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClickedCancelled(currentPageIndexCancelled)"
+                  *ngIf="currentPageIndexCancelled > 1 && currentPageIndexCancelled < pagesCancelled.length - 2">
+                  <a class="page-link" href="#" onclick="return false">{{currentPageIndexCancelled + 1}}</a>
                 </li>
 
                 <li>&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 2}"
-                  (click)="onPageIndexClicked(pages.length - 2)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelled == pagesCancelled.length - 2}"
+                  (click)="onPageIndexClickedCancelled(pagesCancelled.length - 2)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesCancelled.length - 1}}</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 1}"
-                  (click)="onPageIndexClicked(pages.length - 1)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelled == pagesCancelled.length - 1}"
+                  (click)="onPageIndexClickedCancelled(pagesCancelled.length - 1)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesCancelled.length}}</a>
                 </li>
               </ng-container>
 
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+              <li class="page-item" (click)="onPageIndexClickedCancelled(currentPageIndexCancelled + 1)">
                 <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
                   onclick="return false">Next</a>
               </li>
