--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -220,7 +220,7 @@
                     </tr>
                   </thead>
                   <tr
-                    *ngFor="let item of approvedOrderList | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndex : pageSize; let i = index">
+                    *ngFor="let item of approvedOrderList | filter: searchBy : searchText | sort : sortBy : sortOrder | paging : currentPageIndexApproved : pageSize; let i = index">
                     <td>{{item.mrs_id}}</td>
                     <td>{{item.mrs_req_desc}}</td>
                     <td>{{item.mrs_requested_by}}</td>
@@ -241,51 +241,51 @@
 
           <div class="col-12">
             <ul class="pagination justify-content-center mt-1">
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+              <li class="page-item" (click)="onPageIndexClickedApproved(currentPageIndexApproved - 1)">
                 <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
                   onclick="return false">Prev</a>
               </li>
 
-              <ng-container *ngIf="pages.length <= 10">
-                <li class="page-item" *ngFor="let page of pages"
-                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndex}"
-                  (click)="onPageIndexClicked(page.pageIndex)">
+              <ng-container *ngIf="pagesApproved.length <= 10">
+                <li class="page-item" *ngFor="let page of pagesApproved"
+                  [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexApproved}"
+                  (click)="onPageIndexClickedApproved(page.pageIndex)">
                   <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
                 </li>
               </ng-container>
 
               <ng-container *ngIf="pages.length > 10">
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0}"
-                  (click)="onPageIndexClicked(0)">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexApproved == 0}"
+                  (click)="onPageIndexClickedApproved(0)">
                   <a class="page-link" href="#" onclick="return false">1</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1}"
-                  (click)="onPageIndexClicked(1)">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexApproved == 1}"
+                  (click)="onPageIndexClickedApproved(1)">
                   <a class="page-link" href="#" onclick="return false">2</a>
                 </li>
 
-                <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+                <li *ngIf="currentPageIndexApproved > 1 && currentPageIndexApproved < pagesApproved.length - 2">&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndex)"
-                  *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                  <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+                <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClickedApproved(currentPageIndexApproved)"
+                  *ngIf="currentPageIndexApproved > 1 && currentPageIndexApproved < pagesApproved.length - 2">
+                  <a class="page-link" href="#" onclick="return false">{{currentPageIndexApproved + 1}}</a>
                 </li>
 
                 <li>&nbsp;...&nbsp;</li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 2}"
-                  (click)="onPageIndexClicked(pages.length - 2)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexApproved == pagesApproved.length - 2}"
+                  (click)="onPageIndexClickedApproved(pagesApproved.length - 2)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesApproved.length - 1}}</a>
                 </li>
 
-                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 1}"
-                  (click)="onPageIndexClicked(pages.length - 1)">
-                  <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexApproved == pagesApproved.length - 1}"
+                  (click)="onPageIndexClickedApproved(pagesApproved.length - 1)">
+                  <a class="page-link" href="#" onclick="return false">{{pagesApproved.length}}</a>
                 </li>
               </ng-container>
 
-              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+              <li class="page-item" (click)="onPageIndexClickedApproved(currentPageIndexApproved + 1)">
                 <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
                   onclick="return false">Next</a>
               </li>
@@ -293,6 +293,7 @@
           </div>
         </mat-tab>
       </ng-template>
+      
       <ng-template [ngIf]="CancelledOrders === 1">
         <mat-tab>
           <ng-template mat-tab-label>
@@ -970,7 +971,7 @@
                     <th class="text-center" style="width:16%">Actions</th>
                   </tr>
 
-                  <tr *ngFor="let item of itemList | paging : currentPageIndexModuleTagged : pageSize;
+                  <tr *ngFor="let item of itemList | paging : currentPageIndexRM : pageSize;
                    let i = index">
 
                     <td>{{item.item_code}}</td>
@@ -988,56 +989,56 @@
 
                 <div class="col-12">
                   <ul class="pagination justify-content-center mt-1">
-                    <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged - 1)">
+                    <li class="page-item" (click)="onPageIndexClickedRM(currentPageIndexRM - 1)">
                       <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
                         onclick="return false">Prev</a>
                     </li>
 
                     <ng-container *ngIf="pagesRawMats.length <= 10">
                       <li class="page-item" *ngFor="let page of pagesRawMats"
-                        [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexModuleTagged}"
-                        (click)="onPageIndexClickedModuleTagged(page.pageIndex)">
+                        [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexRM}"
+                        (click)="onPageIndexClickedRM(page.pageIndex)">
                         <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
                       </li>
                     </ng-container>
 
                     <ng-container *ngIf="pagesRawMats.length > 10">
-                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 0}"
-                        (click)="onPageIndexClickedModuleTagged(0)">
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexRM == 0}"
+                        (click)="onPageIndexClickedRM(0)">
                         <a class="page-link" href="#" onclick="return false">1</a>
                       </li>
 
-                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == 1}"
-                        (click)="onPageIndexClickedModuleTagged(1)">
+                      <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexRM == 1}"
+                        (click)="onPageIndexClickedRM(1)">
                         <a class="page-link" href="#" onclick="return false">2</a>
                       </li>
 
                       <li
-                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesRawMats.length - 2">
+                        *ngIf="currentPageIndexRM > 1 && currentPageIndexRM < pagesRawMats.length - 2">
                         &nbsp;...&nbsp;</li>
 
                       <li class="page-item" [ngClass]=" 'link-active-paging' "
-                        (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged)"
-                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexModuleTagged < pagesRawMats.length - 2">
-                        <a class="page-link" href="#" onclick="return false">{{currentPageIndexModuleTagged + 1}}</a>
+                        (click)="onPageIndexClickedRM(currentPageIndexRM)"
+                        *ngIf="currentPageIndexModuleTagged > 1 && currentPageIndexRM < pagesRawMats.length - 2">
+                        <a class="page-link" href="#" onclick="return false">{{currentPageIndexRM + 1}}</a>
                       </li>
 
                       <li>&nbsp;...&nbsp;</li>
 
                       <li class="page-item"
-                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pagesRawMats.length - 2}"
-                        (click)="onPageIndexClickedModuleTagged(pagesRawMats.length - 2)">
+                        [ngClass]="{ 'link-active-paging': currentPageIndexRM == pagesRawMats.length - 2}"
+                        (click)="onPageIndexClickedRM(pagesRawMats.length - 2)">
                         <a class="page-link" href="#" onclick="return false">{{pagesRawMats.length - 1}}</a>
                       </li>
 
                       <li class="page-item"
-                        [ngClass]="{ 'link-active-paging': currentPageIndexModuleTagged == pagesRawMats.length - 1}"
-                        (click)="onPageIndexClickedModuleTagged(pagesRawMats.length - 1)">
+                        [ngClass]="{ 'link-active-paging': currentPageIndexRM == pagesRawMats.length - 1}"
+                        (click)="onPageIndexClickedRM(pagesRawMats.length - 1)">
                         <a class="page-link" href="#" onclick="return false">{{pagesRawMats.length}}</a>
                       </li>
                     </ng-container>
 
-                    <li class="page-item" (click)="onPageIndexClickedModuleTagged(currentPageIndexModuleTagged + 1)">
+                    <li class="page-item" (click)="onPageIndexClickedRM(currentPageIndexRM + 1)">
                       <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
                         onclick="return false">Next</a>
                     </li>
