Viewing of Actual Move Order of a Items add outline SCSSS

--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -890,7 +890,7 @@
               <mat-card class="text-bold">Recieving Information </mat-card>
             </div>
             <div class="box-2">
-              <mat-card class="text-bold">Move Order No. {{totalStoreOrderDispatching}}</mat-card>
+              <mat-card class="text-bold">Move Order No. <input class="input-transparent" formControlName="Wh_checker_move_order_no" readonly/></mat-card>
             </div>
           </div>
 
