--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -444,7 +444,7 @@
       <mat-tab>
         <ng-template mat-tab-label>
           Cancelled Transactions
-          <!-- &nbsp; <span *ngIf="totalStoreOrderRowCount" class="badge badge-danger zerobadge{{ totalStoreOrderRowCount }}">{{ totalStoreOrderRowCount }}</span> -->
+          &nbsp; <span class="badge badge-danger zerobadge{{ totalCancelledOrderParent }}">{{ totalCancelledOrderParent }}</span>
         </ng-template>
 
         <div class="col-sm-12" style="padding-top: 2em;">
@@ -502,11 +502,10 @@
                   <thead>
                       <tr class="text-light header-bg-color-um system-name">
                           <th>Preparation Date</th>
-                          <th>Category</th>
-                          <th>Fox</th>
-                          <th>Store</th>
-                          <th>Route</th>
-                          <th>Area</th>
+                          <th>Department</th>
+                          <th>Description</th>
+                          <th>Requested By</th>
+                          <th>Total Prepared Item(s)</th>
                           <th>Total Item(s)</th>
                           <th class="text-center">Action</th>
                       </tr>
@@ -515,12 +514,11 @@
                       <tr
                           *ngFor="let item of CancelledOrderList | filter: searchBy : searchText | paging : currentPageIndex : pageSize; let i = index">
                           <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
-                          <td>{{item.category}}</td>
-                          <td>{{item.fox}}</td>
-                          <td>{{item.store_name}}</td>
-                          <td>{{item.route}}</td>
-                          <td>{{item.area}}</td>
-                          <td>{{item.total_state_repack_cancelled_qty | number}}</td>
+                          <td>{{item.department_name}}</td>
+                          <td>{{item.mrs_req_desc}}</td>
+                          <td>{{item.mrs_requested_by}}</td>
+                          <td>{{item.totalPreparedItems | number}}</td>
+                          <td>{{item.totalRejectItems | number}}</td>
                           <td class="text-center">
                             <button mat-icon-button color="black" (click)="onEditClick($event, i)"
                               data-toggle="modal" data-target="#editModal" data-backdrop="false" title="View"
