--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -171,8 +171,8 @@
         <mat-tab>
           <ng-template mat-tab-label>
             Approved Orders
-            &nbsp; <span *ngIf="approvedOrderListCount"
-              class="badge badge-danger zerobadge{{ approvedOrderListCount }}">{{ approvedOrderListCount }}</span>
+            <!-- &nbsp; <span *ngIf="approvedOrderListCount"
+              class="badge badge-danger zerobadge{{ approvedOrderListCount }}">{{ approvedOrderListCount }}</span> -->
           </ng-template>
 
           <div class="col-sm-12" style="padding-top: 2em">
