--- a/app/admin/components/projet-ponearly-expiry-approval/projet-ponearly-expiry-approval.component.html
+++ b/app/admin/components/projet-ponearly-expiry-approval/projet-ponearly-expiry-approval.component.html
@@ -1,8 +1,4 @@
 <div class="row">
-
-
-  <!-- 
-    <div class="col-xl-12"> -->
   <div class="col-xl-12 col-lg-9 mx-auto divForModuleTable">
     <nav aria-label="breadcrumb textStyle">
       <ol class="breadcrumb">
@@ -64,29 +60,20 @@
 
     <div class="col-lg-12">
       <div class="d-flex">
-
-
-
-
-        <!-- Start of Search -->
-    
-
-          <!-- End Search -->
-
-          <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain">
-          <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width: 100%">
+          <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
+          <table class="" style="width: 100%">
             <thead>
               <tr class="text-light header-bg-color-um system-name">
                 <th>
                   PO&nbsp;No.
-                  <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'countryName'"
-                    (click)="sortBy = 'countryName'; sortOrder = 'ASC'"></i>
+                  <i class="fa fa-sort hand-icon" *ngIf="sortBy != 'po_number'"
+                    (click)="sortBy = 'po_number'; sortOrder = 'ASC'"></i>
 
                   <i class="fa fa-sort-up hand-icon text-primary"
-                    *ngIf="sortBy == 'countryName' && sortOrder == 'ASC'" (click)="sortOrder = 'DESC'"></i>
+                    *ngIf="sortBy == 'po_number' && sortOrder == 'ASC'" (click)="sortOrder = 'DESC'"></i>
 
                   <i class="fa fa-sort-down hand-icon text-primary"
-                    *ngIf="sortBy == 'countryName' && sortOrder == 'DESC'" (click)="sortOrder = 'ASC'"></i>
+                    *ngIf="sortBy == 'po_number' && sortOrder == 'DESC'" (click)="sortOrder = 'ASC'"></i>
                 </th>
                 <th>PO&nbsp;Date</th>
                 <th>Item&nbsp;Code</th>
@@ -145,7 +132,7 @@
     </div>
       </div>
     </div>
-  </div>
+
   <!-- Grid Box Ends -->
 
   <!-- Paging Box Starts -->
@@ -199,10 +186,6 @@
       </li>
     </ul>
   </div>
-  <!-- Paging Box Ends -->
-
-
-  <!-- END -->
 </div>
 
 
