Receiving partial remove unused entity conversion to the dynamic checklist

--- a/app/admin/components/wh-rejection-approval/wh-rejection-approval.component.html
+++ b/app/admin/components/wh-rejection-approval/wh-rejection-approval.component.html
@@ -55,7 +55,7 @@
               ></span>
             </div>
             <input
-              type="text"
+              type="search"
               class="form-control"
               placeholder="Find here...."
               id="txtSearchText"
