--- a/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.html
+++ b/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.html
@@ -7,12 +7,8 @@
         </div>
         <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy">
           <option value="is_approved_prepa_date">PREPARATION DATE</option>
-          <option value="item_code">ITEM CODE</option>
-          <option value="description">DESCRIPTION</option>
+          <option value="fox">STORE CODE</option>
           <option value="category">CATEGORY</option>
-          <option value="store_name">STORE</option>
-          <option value="route">ROUTE</option>
-          <option value="area">AREA</option>
         </select>
       </div>
     </div>
@@ -54,7 +50,7 @@
           </thead>
           <tbody>
             <tr
-              *ngFor="let item of cancelledOrderList | filter: searchBy : searchText | paging : currentPageIndex : pageSize; let i = index">
+              *ngFor="let item of cancelledOrderList | filter: searchBy : searchText | paging : currentPageIndexCancelledTransaction : pageSize; let i = index">
               <td>{{item.is_approved_prepa_date | date: "MM/dd/yyyy" }}</td>
               <td>{{item.category}}</td>
               <td>{{item.fox}}</td>
@@ -79,50 +75,50 @@
   <!-- pagination -->
   <div class="col-md-12">
     <ul class="pagination paginationStyle justify-content-center mt-1">
-      <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+      <li class="page-item" (click)="onPageIndexClicked(currentPageIndexCancelledTransaction - 1)">
         <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#" onclick="return false">Prev</a>
       </li>
 
-      <ng-container *ngIf="pages.length <= 10">
-        <li class="page-item" *ngFor="let page of pages"
-          [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndex}"
+      <ng-container *ngIf="pagesCancelledTransaction.length <= 10">
+        <li class="page-item" *ngFor="let page of pagesCancelledTransaction"
+          [ngClass]="{ 'link-active-paging': page.pageIndex == currentPageIndexCancelledTransaction}"
           (click)="onPageIndexClicked(page.pageIndex)">
           <a class="page-link" href="#" onclick="return false">{{page.pageIndex + 1}}</a>
         </li>
       </ng-container>
 
-      <ng-container *ngIf="pages.length > 10">
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0}"
+      <ng-container *ngIf="pagesCancelledTransaction.length > 10">
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledTransaction == 0}"
           (click)="onPageIndexClicked(0)">
           <a class="page-link" href="#" onclick="return false">1</a>
         </li>
 
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1}"
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledTransaction == 1}"
           (click)="onPageIndexClicked(1)">
           <a class="page-link" href="#" onclick="return false">2</a>
         </li>
 
-        <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">&nbsp;...&nbsp;</li>
+        <li *ngIf="currentPageIndexCancelledTransaction > 1 && currentPageIndexCancelledTransaction < pagesCancelledTransaction.length - 2">&nbsp;...&nbsp;</li>
 
-        <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndex)"
-          *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-          <a class="page-link" href="#" onclick="return false">{{currentPageIndex + 1}}</a>
+        <li class="page-item" [ngClass]=" 'link-active-paging' " (click)="onPageIndexClicked(currentPageIndexCancelledTransaction)"
+          *ngIf="currentPageIndexCancelledTransaction > 1 && currentPageIndexCancelledTransaction < pagesCancelledTransaction.length - 2">
+          <a class="page-link" href="#" onclick="return false">{{currentPageIndexCancelledTransaction + 1}}</a>
         </li>
 
         <li>&nbsp;...&nbsp;</li>
 
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 2}"
-          (click)="onPageIndexClicked(pages.length - 2)">
-          <a class="page-link" href="#" onclick="return false">{{pages.length - 1}}</a>
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledTransaction == pagesCancelledTransaction.length - 2}"
+          (click)="onPageIndexClicked(pagesCancelledTransation.length - 2)">
+          <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length - 1}}</a>
         </li>
 
-        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == pages.length - 1}"
-          (click)="onPageIndexClicked(pages.length - 1)">
-          <a class="page-link" href="#" onclick="return false">{{pages.length}}</a>
+        <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndexCancelledTransaction == pagesCancelledTransaction.length - 1}"
+          (click)="onPageIndexClicked(pagesCancelledTransaction.length - 1)">
+          <a class="page-link" href="#" onclick="return false">{{pagesCancelledTransaction.length}}</a>
         </li>
       </ng-container>
 
-      <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+      <li class="page-item" (click)="onPageIndexClicked(currentPageIndexCancelledTransaction + 1)">
         <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#" onclick="return false">Next</a>
       </li>
     </ul>
