Date Format Adjustment

--- a/app/components/internal-preparation/internal-order.component.html
+++ b/app/components/internal-preparation/internal-order.component.html
@@ -1009,7 +1009,7 @@
       </div>
     </div>
   </div>
-  {{cancelOrderItemForm.value | json}}
+  <!-- {{cancelOrderItemForm.value | json}} -->
 </form>
 
 
@@ -1167,7 +1167,7 @@
             </mat-select>
           </mat-form-field>
         </div>
-        {{cancelOrderForm.value | json}}
+        <!-- {{cancelOrderForm.value | json}} -->
         <div class="modal-footer">
           <button mat-stroked-button color="accent" id="cancelOrderCloseModal" [hidden]="true" data-dismiss="modal"
             class="mr-2">Cancel</button>
