--- a/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.html
+++ b/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.html
@@ -43,7 +43,7 @@
               <th>Fox</th>
               <th>Store</th>
               <th>Route</th>
-              <th>Area Touch</th>
+              <th>Area</th>
               <th>Total Item(s)</th>
               <th class="text-center">Action</th>
             </tr>
