Dispatching Viewing and add styling for the table

--- a/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.scss
+++ b/app/admin/components/store-order-cancelled-transaction/store-order-active-cancelled-transaction.component.scss
@@ -1,7 +1,8 @@
 .hideObject {
-    display: none;
+  display: none;
 }
 
 td {
   font: 12px Roboto, 'Helvetica Neue', san-serif;
+  vertical-align: middle;
 }
